--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="card">
     <div class="heart">💖</div>
-    <h1>Pao, will you be my Valentine?</h1>
+    <h1>Pao, will you be my Galentine?</h1>
 
     <div class="buttons" id="zone">
       <button id="yes">Yes 💕</button>
